--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,11 @@
 * {
   box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
 }
 
 body {
-  width: 1440px;
+  width: 375px;
   background-color: hsl(0, 0%, 98%);
   font-size: 15px;
   font-family: "Poppins", sans-serif;
@@ -17,7 +19,7 @@ main {
   color: grey;
   text-align: center;
   font-weight: 400;
-  font-size: 2.2em;
+  font-size: 1.9em;
   margin-bottom: 0px;
   padding: 0px;
   margin: 3% 0% 0% 0%; 
@@ -27,7 +29,7 @@ main {
   color: black;
   text-align: center;
   font-weight: 600;
-  font-size: 2em;
+  font-size: 1.9em;
   padding: 0%;
   margin: 0% 0% 2% 0%;
 }
@@ -35,7 +37,7 @@ main {
 .top-header p {
   color: grey;
   text-align: center;
-  font-size: 1.8;
+  font-size: 1.2em;
   font-weight: 400;
   margin: 0%;
   padding: 0.2%;
@@ -43,27 +45,38 @@ main {
 
 .card {
   position: relative;
-  width: 25%;
+  width: 370px;
   background-color: rgb(255,255,255);
-  padding: 2%;
-  border-radius: 3%;
-  margin: 2% auto;
+  padding: 20px;
+  border-radius: 6px;
+  margin: 20px auto;
   box-shadow: 1px 8px 8px hsl(229, 6%, 85%);
 }
 
 .card p {
-  padding-right: 9%; 
+  padding-right: 20px; 
 }
 
-.card h3 {
-  padding: 0%;
-  margin: 0%;
+.super {
+  border-top: 4px solid hsl(180, 62%, 55%);
+}
+
+.team {
+  border-top: 4px solid hsl(0, 78%, 62%);
+}
+
+.karma {
+  border-top: 4px solid hsl(34, 97%, 64%);
+}
+
+.calc {
+  border-top: 4px solid hsl(212, 86%, 64%);
 }
 
 .icon {
   position: relative;
   left: 75%;
-  padding: 10% 0% 0% 0%;
+  padding-top: 40px;
 }
 
 .attribution { 
@@ -75,24 +88,3 @@ main {
   color: hsl(228, 45%, 44%); 
 }
 
-#super {
-  position: absolute;
-  top: 25%;
-  left: 10%;
-  border-top: 4px solid hsl(180, 62%, 55%);
-}
-
-#team {
-  border-top: 4px solid hsl(0, 78%, 62%);
-}
-
-#karma {
-  border-top: 4px solid hsl(34, 97%, 64%);
-}
-
-#calc {
-  position: absolute;
-  top: 25%;
-  right: 10%;
-  border-top: 4px solid hsl(212, 86%, 64%);
-}
