--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ body {
   background-color: hsl(0, 0%, 98%);
   font-size: 15px;
   font-family: "Poppins", sans-serif;
+  padding-top: 50px;
 }
 
 main {
